# tokenscope-public

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DESIGN.md  PLAN.md  README.md  V2_PLAN.md  debug_scanner.cjs  final_verify.cjs  index.html  init.sh  package.json  start.sh  stop.sh  tsconfig.node.json  vite.cli.config.ts  vite.config.ts
.claude/agents/: analyzer-agent.md  parser-agent.md  prescriber-agent.md  ui-agent.md
.codex/agents/: analyzer-agent.toml  parser-agent.toml  prescriber-agent.toml  ui-agent.toml
cli/: tokenscope-cli.ts  tsconfig.json
docs/reports/: agent-md-token-comparison.md
dogfood/: README.md  generate-fixtures.cjs  token-diet-simulation-result.md  token-diet-simulation.cjs
dogfood/sessions/: 2026-05-06-dogfood-bad.jsonl  2026-05-06-dogfood-good.jsonl
rag/: .env.example  .gitignore  ask.sh
rag/prompt-coach-wiki/: README.md  prompt-patterns.md  rewrite-rules.md  token-economy.md
rag/src/: api.py  app.py  chain.py  config.py  vectorstore.py
scripts/: agent-md-token-report.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConversationReview.tsx  Dashboard.tsx  DiagnosticPanel.tsx  DiffViewer.tsx  FixPreview.tsx  PromptCoachPanel.tsx  ProviderQuestionPanel.tsx  QuestionGuide.tsx  QuestionRefactorer.tsx  ScopeReview.tsx  SessionList.tsx  SummaryCard.tsx
src/lib/: analyzer.ts  (+7 more)
tokenscope_rag/: HYBRID_ROUTER.md  api.py  ask.sh  external_provider.py  provider_qa_log.py  route_logger.py  router.py  session_log.py
(+11 files in other folders)
