[package]
name = "tokenscope"
version = "0.1.0"
description = "AI Agent Token Waste Analyzer"
authors = ["Anonymous"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tokenscope_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "tokenscope"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
